(crude) fix to words too long to fit but still won't wrap

--- a/views/stylesheets/style.styl
+++ b/views/stylesheets/style.styl
@@ -110,6 +110,7 @@ blockquote
   padding 0
   letter-spacing 2px
   font-family 'hellodenverregular'  
+  overflow-x hidden
 
 blockquote:before
   display inline
